@@ -51,8 +51,6 @@ AC_DEFUN([NA_ENABLE_MANUALS],[
 	
 	_CHECK_FOR_HTML_MANUALS
 	_CHECK_FOR_PDF_MANUALS
-
-	AM_CONDITIONAL([ENABLE_MANUALS], [test "${enable_html_manuals}" != "no" -o  "${enable_pdf_manuals}" != "no" ])
 ])
 
 AC_DEFUN([_AC_ARG_NA_ENABLE_HTML_MANUALS],[
